--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+AccountLedger.API/AccountLedger.API.db
+AccountLedger.API/Migrations/
