Account CRUD completed in front end

--- a/AccountLedger.Web/AccountLedger.csproj
+++ b/AccountLedger.Web/AccountLedger.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Account\Transaction\" />
+  </ItemGroup>
+
 </Project>
